--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "custom-slider-pro",
-	"version": "0.0.1",
+	"version": "0.0.11",
 	"description": "A customizable slider component for SvelteKit with multiple shapes and styles",
 	"type": "module",
 	"exports": {
@@ -24,20 +24,23 @@
 		"prepublishOnly": "npm run package"
 	},
 	"peerDependencies": {
-		"svelte": "^4.0.0"
+		"svelte": "^5.1.16"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/kit": "^2.8.1",
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"svelte": "^4.2.19",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/svelte": "^4.0.3",
+		"@types/jest": "^29.5.14",
+		"@types/testing-library__jest-dom": "^6.0.0",
+		"svelte": "^5.1.16",
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.0",
-		"vitest": "^2.1.5",
-		"@testing-library/svelte": "^4.0.3"
+		"vitest": "^2.1.5"
 	},
 	"keywords": [
 		"svelte",
@@ -53,12 +56,12 @@
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/civoremon/custom-slider-pro"
+		"url": "https://github.com/Civoremon/custom-slider-pro"
 	},
 	"bugs": {
-		"url": "https://github.com/civoremon/custom-slider-pro/issues"
+		"url": "https://github.com/Civoremon/custom-slider-pro/issues"
 	},
-	"homepage": "https://github.com/civoremon/custom-slider-pro#readme",
+	"homepage": "https://github.com/Civoremon/custom-slider-pro#readme",
 	"publishConfig": {
 		"access": "public"
 	},
