--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "custom-slider-pro",
-	"version": "0.0.15",
+	"version": "0.0.16",
 	"description": "A customizable slider component for SvelteKit with multiple shapes and styles",
 	"type": "module",
 	"exports": {
@@ -61,7 +61,7 @@
 	"bugs": {
 		"url": "https://github.com/Civoremo/custom-slider-pro/issues"
 	},
-	"homepage": "https://github.com/Civoremo/custom-slider-pro#readme",
+	"homepage": "https://custom-slider-pro.netlify.app/",
 	"publishConfig": {
 		"access": "public"
 	},
